# su2-3nj-generating-functional

./: .gitignore  A Universal Generating Functional for SU(2) 3nj Symbols.tex  README.md  UQ-RESOLVED.ndjson  UQ-TODO.ndjson  VnV-RESOLVED.ndjson  VnV-TODO.ndson  _config.yml  index.html  index.md  pyproject.toml  su2-3nj-generating-functional.code-workspace
.github/instructions/: copilot-instructions.md
.github/workflows/: pentagon-identity.yml  test-3nj-generator.yml
_site/: A Universal Generating Functional for SU(2) 3nj Symbols.tex  README.md  index.html
_site/assets/css/: style.css  style.css.map
data/: 15j_generating_function_tests.csv  3nj_recursion_test.csv  biedenharn_elliott_identity.csv  generate_3nj_test_results.csv  hilbert_series_coeffs_n2_6.csv  series_coefficients_G_xy_up_to2.csv  uq_3nj_sensitivity.csv  uq_compare_rational_vs_numeric.csv  uq_determinant_stability.csv  wigner_6j_symbol.csv
project/: su2_3nj.py
scripts/: compute_G_xy_series_coefficients.py  compute_hilbert_series_coefficients_n2_6.py  generate_reference_3nj.py  test_15j_generating_function.py  test_3nj_recursion.py  test_generate_3nj.py  test_wigner_6j_symbol.py  uq_3nj_sensitivity.py  uq_compare_rational_vs_numeric.py  uq_determinant_stability.py  validate_biedenharn_elliott_identity.py
src/su2_3nj_gen/: __init__.py  generating_functional.py
tests/: reference_3nj.json  test_biedenharn_elliott_identity.py  test_generate_3nj.py
