[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "su2_3nj_gen"
version = "0.1.0"
description = "Universal SU(2) 3nj generating functional & closed-form APIs"
authors = [
  { name="Arcticoder" }
]
readme = "README.md"
license = { text = "Unlicense" }
dependencies = [
  "sympy>=1.10",
  "numpy>=1.24"
]

[tool.setuptools.packages.find]
where   = ["src"]
include = ["su2_3nj_gen*"]